[project]
name = "adit"
description = "ADIT (Automated DICOM Transfer) is a swiss army knife to exchange DICOM data between various systems by using a convenient web frontend."
authors = [{ name = "Kai Schlamp" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
version = "0.0.0"

[dependency-groups]
dev = [
    "debugpy",
    "django-browser-reload",
    "django-debug-permissions",
    "django-debug-toolbar",
    "django-stubs",
    "django-test-migrations",
    "djangorestframework-stubs",
    "djlint",
    "factory-boy<=3.3.2",
    "Faker",
    "ipykernel",
    "ipython",
    "nest-asyncio",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "pytest-only",
    "pytest-order",
    "pytest-picked",
    "pytest-playwright",
    "pytest-timeout",
    "pytest-watch",
    "python-dotenv",
    "pywatchman",
    "requests",
    "ruff",
    "time-machine",
    "typer",
    "vermin",
]

[tool.uv.sources]
adit_server = { workspace = true }

[tool.uv.workspace]
members = ["adit_server"]

[tool.pyright]
ignore = ["**/migrations", "**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "adit_server.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["adit/**/tests"]
log_cli = 0
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["acceptance: mark a test as an acceptance test."]
filterwarnings = [
    # We already fixed this, so we only need to remove this ignore with next major version of factory boy
    "ignore:.*Factory._after_postgeneration will stop saving the instance:DeprecationWarning",
    "ignore:'cgi' is deprecated:DeprecationWarning",
    'ignore:.*use of fork\(\) may lead to deadlocks.*:DeprecationWarning',
    'ignore:.*Use timezone-aware objects to represent datetimes in UTC.*:DeprecationWarning',
]
timeout = 60

[tool.coverage.run]
branch = true
source = ["adit"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py312"
exclude = ["migrations", "notebooks"]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[tool.djlint]
profile = "django"
max_line_length = 120
ignore = "H021,H030,H031,T002"
