[project]
name = "adit"
description = "ADIT (Automated DICOM Transfer) is a swiss army knife to exchange DICOM data between various systems by using a convenient web frontend."
authors = [{ name = "Kai Schlamp" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]
dependencies = [
    "adit-radis-shared @ git+https://github.com/openradx/adit-radis-shared.git@0.14.0",
    "adrf ~= 0.1",
    "aiofiles ~= 24.1",
    "asyncinotify ~= 4.2",
    "channels ~= 4.2",
    "crispy-bootstrap5 ~= 2024.10",
    "cryptography ~= 44.0",
    "daphne ~= 4.1",
    "dicognito ~= 0.17.0",
    "dicomweb-client ~= 0.59",
    "Django ~= 5.1",
    "django-crispy-forms ~= 2.3",
    "django-dbbackup ~= 4.2",
    "django-extensions ~= 3.2",
    "django-filter ~= 25.1",
    "django-htmx ~= 1.22",
    "django-loginas ~= 0.3",
    "django-pglock ~= 1.7",
    "django-registration-redux ~= 2.13",
    "django-revproxy ~= 0.13",
    "django-tables2 ~= 2.7",
    "djangorestframework ~= 3.15",
    "environs[django] ~= 14.1",
    "humanize ~= 4.12",
    "janus ~= 2.0",
    "Markdown ~= 3.7",
    "openpyxl ~= 3.1",
    "pandas ~= 2.2",
    "pebble ~= 5.1",
    "procrastinate[django] ~= 3.0",
    "psycopg[binary] ~= 3.2",
    "pyarrow ~= 19.0",
    "pydicom ~= 2.4",
    "pynetdicom ~= 2.1",
    "Twisted[tls,http2] ~= 24.11",
    "wait-for-it ~= 2.3",
    "watchfiles ~= 1.0",
    "whitenoise ~= 6.9",
]

[dependency-groups]
dev = [
    "debugpy ~= 1.8",
    "django-browser-reload ~= 1.18",
    "django-debug-permissions ~= 1.0",
    "django-debug-toolbar ~= 5.0",
    "django-stubs ~= 5.1",
    "django-test-migrations ~= 1.4",
    "djangorestframework-stubs ~= 3.15",
    "djlint ~= 1.36",
    "factory-boy >=3.3.0, <3.3.3",
    "Faker ~= 36.1",
    "ipykernel ~= 6.29",
    "ipython ~= 8.32",
    "nest-asyncio ~= 1.6",
    "pyright ~= 1.1",
    "pytest ~= 8.3",
    "pytest-asyncio ~= 0.25",
    "pytest-cov ~= 6.0",
    "pytest-django ~= 4.10",
    "pytest-mock ~= 3.14",
    "pytest-only ~= 2.1",
    "pytest-order ~= 1.3",
    "pytest-picked ~= 0.5",
    "pytest-playwright ~= 0.7",
    "pytest-timeout ~= 2.3",
    "pytest-watch ~= 4.2",
    "python-dotenv ~= 1.0",
    "pywatchman ~= 2.0",
    "requests ~= 2.32",
    "ruff ~= 0.9",
    "time-machine ~= 2.16",
    "typer ~= 0.15",
    "vermin ~= 1.6",
]
client = ["adit-client"]

[tool.uv]
default-groups = ["dev", "client"]

[tool.uv.sources]
adit-client = { path = "adit-client" }

[tool.pyright]
ignore = ["**/migrations", "**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "adit.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["adit/**/tests", "adit-client/**/tests"]
log_cli = 0
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["acceptance: mark a test as an acceptance test."]
filterwarnings = [
    # We already fixed this, so we only need to remove this ignore with next major version of factory boy
    "ignore:.*Factory._after_postgeneration will stop saving the instance:DeprecationWarning",
    "ignore:'cgi' is deprecated:DeprecationWarning",
    'ignore:.*use of fork\(\) may lead to deadlocks.*:DeprecationWarning',
    'ignore:.*Use timezone-aware objects to represent datetimes in UTC.*:DeprecationWarning',
]
timeout = 60

[tool.coverage.run]
branch = true
source = ["adit", "adit-client"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py312"
exclude = ["migrations", "notebooks"]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[tool.djlint]
profile = "django"
max_line_length = 120
ignore = "H021,H030,H031,T002"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
