[project]
name = "adit"
description = "ADIT (Automated DICOM Transfer) is a swiss army knife to exchange DICOM data between various systems by using a convenient web frontend."
authors = [{ name = "Kai Schlamp" }]
license = "AGPL-3.0-or-later"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "adit-radis-shared @ git+https://github.com/openradx/adit-radis-shared.git@0.19.1",
    "adrf>=0.1.9",
    "aiofiles>=24.1.0",
    "asyncinotify>=4.2.0",
    "channels>=4.2.0",
    "crispy-bootstrap5>=2024.10",
    "cryptography>=44.0.1",
    "daphne>=4.1.2",
    "dcm2niix>=1.0.20250506",
    "dicognito>=0.17.0",
    "dicomweb-client>=0.60.0",
    "Django>=5.1.6",
    "django-block-fragments>=0.1.1",
    "django-cotton>=1.6.0",
    "django-crispy-forms>=2.3",
    "django-dbbackup>=4.2.1",
    "django-extensions>=3.2.3",
    "django-filter>=25.1",
    "django-htmx>=1.22.0",
    "django-loginas>=0.3.11",
    "django-pglock>=1.7.1",
    "django-registration-redux>=2.13",
    "django-revproxy>=0.13.0",
    "django-tables2>=2.7.5",
    "djangorestframework>=3.15.2",
    "environs[django]>=14.1.1",
    "humanize>=4.12.1",
    "janus>=2.0.0",
    "Markdown>=3.7",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pebble>=5.1.0",
    "procrastinate[django]>=3.0.2",
    "psycopg[binary]>=3.2.5",
    "pyarrow>=19.0.1",
    "pydicom>=2.4.4",
    "pynetdicom>=2.1.1",
    "stream-zip>=0.0.83",
    "stamina>=24.2.0",
    "Twisted[tls,http2]>=24.11.0",
    "wait-for-it>=2.3.0",
    "watchfiles>=1.0.4",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "django-browser-reload>=1.18.0",
    "django-debug-permissions>=1.0.0",
    "django-debug-toolbar>=5.0.1",
    "django-stubs>=5.2.0",
    "django-test-migrations>=1.4.0",
    "djangorestframework-stubs>=3.15.3",
    "djlint>=1.36.4",
    "factory-boy >=3.3.0, <3.3.3",
    "Faker>=36.1.1",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.7",
    "nest-asyncio>=1.6.0",
    "nibabel>=5.3.2",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-mock>=3.14.0",
    "pytest-order>=1.3.0",
    "pytest-picked>=0.5.1",
    "pytest-playwright>=0.7.0",
    "pytest-timeout>=2.3.1",
    "pytest-watch>=4.2.0",
    "python-dotenv>=1.0.1",
    "pywatchman>=2.0.0",
    "requests>=2.32.3",
    "ruff>=0.9.7",
    "time-machine>=2.16.0",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "vermin>=1.6.0",
]
client = ["adit-client"]

[project.scripts]
cli = "cli:app"

[tool.uv]
default-groups = ["dev", "client"]
constraint-dependencies = ["autobahn<25.11.1"]

[tool.uv.sources]
adit-client = { path = "./adit-client", editable = true }

[tool.pyright]
ignore = ["**/migrations", "**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "adit.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["adit/**/tests", "adit-client/**/tests"]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["acceptance: mark a test as an acceptance test."]
filterwarnings = [
    # We already fixed this, so we only need to remove this ignore with next major version of factory boy
    "ignore:.*Factory._after_postgeneration will stop saving the instance:DeprecationWarning",
    "ignore:'cgi' is deprecated:DeprecationWarning",
    'ignore:.*use of fork\(\) may lead to deadlocks.*:DeprecationWarning',
    'ignore:.*Use timezone-aware objects to represent datetimes in UTC.*:DeprecationWarning',
    'ignore:.*get_frame_offsets is deprecated and will be removed in v4.0.*:DeprecationWarning',
]
timeout = 60

[tool.coverage.run]
branch = true
source = ["adit", "adit-client"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py312"
exclude = ["migrations", "notebooks"]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[tool.djlint]
profile = "django"
max_line_length = 120
ignore = "H021,H030,H031,T002"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
