[project]
name = "adit-client"
description = "ADIT Client library to connect to an ADIT server."
authors = [{ name = "Kai Schlamp" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]
dependencies = [
    "dicognito>=0.17.0",
    "dicomweb-client>=0.59.3",
    "pydicom>=2.4.4",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
