[tool.poetry]
name = "adit-client"
version = "0.2.1"
description = "ADIT Client library to connect to an ADIT server."
authors = ["Kai Schlamp <kai.schlamp@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "adit_client" }]

[tool.poetry.dependencies]
python = "^3.11"
dicomweb-client = "^0.59.1"
pydicom = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
